--- a/klimax.html
+++ b/klimax.html
@@ -147,13 +147,41 @@
         <h1 style="font-weight: bolder">
           KLIMAX TEPLICE s.r.o. spolupracuje s
         </h1>
-        <div id="slide-show">
-          <center><img src="images\omv_logo.png" alt="omv" /></center>
-          <center><img src="images\Veolia_logo.png" alt="omv" /></center>
-          <center>
-            <img src="images\mi_logo.png" alt="omv" style="width: 50%" />
-          </center>
-          <center><img src="images\bata-logo.png" alt="omv" /></center>
+        <div class="carousel slide" data-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active" id="part">
+              <div class="slide-show">
+                <center><img src="images\omv_logo.png" alt="omv" /></center>
+                <center>
+                  <img src="images\Veolia_logo.png" alt="veolia" />
+                </center>
+                <center>
+                  <img
+                    src="images\ukcom_logo.png"
+                    alt=""
+                    style="width: 50%; padding-left: 10px"
+                  />
+                </center>
+                <center><img src="images\bata-logo.png" alt="bata" /></center>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="slide-show">
+                <center><img src="images\omv_logo.png" alt="omv" /></center>
+                <center>
+                  <img src="images\Veolia_logo.png" alt="veolia" />
+                </center>
+                <center>
+                  <img
+                    src="images\ukcom_logo.png"
+                    alt="omv"
+                    style="width: 50%"
+                  />
+                </center>
+                <center><img src="images\bata-logo.png" alt="bata" /></center>
+              </div>
+            </div>
+          </div>
         </div>
       </article>
     </section>
@@ -324,29 +352,31 @@
         </div>
         <div>
           <u style="text-transform: uppercase">Sociální sítě</u>
-          <div style="padding-top: 30px;">
+          <div style="padding-top: 30px">
             <img
               src="images\fb-icon.png"
               alt="vist us on facebook"
               class="socialmedia-imgs"
-            /><br>
+            /><br />
             <img
               src="images\googleplus-icon.png"
               alt="connect on google plus "
               class="socialmedia-imgs"
-            /><br>
+            /><br />
             <img
               src="images\linkedin-icon.png"
               alt="follow us on Linkedin"
               class="socialmedia-imgs"
-            /><br>
+            /><br />
           </div>
         </div>
       </div>
 
       <div id="copyrights">
-        <p style="float: left;">©KLIMAX TEPLICE, s. r. o., všechna práva vyhrazena</p>
-        <p style="float: right;">Grafický design a vývoj MKGTO, s. r. o.</p>
+        <p style="float: left">
+          ©KLIMAX TEPLICE, s. r. o., všechna práva vyhrazena
+        </p>
+        <p style="float: right">Grafický design a vývoj MKGTO, s. r. o.</p>
       </div>
     </footer>
   </body>
